--- a/crudPAC/crud_PAC.html
+++ b/crudPAC/crud_PAC.html
@@ -66,12 +66,11 @@
       </div>
     </div>
 
-
     <div class="all-div">
       <div class="div-Conteiner">
         <div id="Container">
           <div class="selectt">
-            <select id="select" onclick="valorSERV(this.value)">
+            <select id="select" onclick="valorPAC(this.value)">
               <option value=""></option>
               <option value="Médicos">Médicos</option>
               <option value="Pacientes">Pacientes</option>
@@ -80,14 +79,21 @@
           </div>
           <button type="submit" id="btn_ADICIONAR">+ ADICIONAR</button>
       </div>
-        <div class="crud-SERV">
+        <div class="crud-PAC">
           <div>
             <table class="table">
               <tr id="mains-tr">
+                <td>CPF</td>
+                <td>RG</td>
+                <td>DATA NASCIMENTO</td>
                 <td>NOME</td>
-                <td>HORARIOS</td>
-                <td>DATA</td>
-                <td>NOME DO PACIENTE</td>
+                <td>Nº CASA</td>
+                <td>RUA</td>
+                <td>BAIRRO</td>
+                <td>CIDADE</td>
+                <td>CEP</td>
+                <td>TELEFONE</td>
+                <td>CONSULTA</td>
                 <td>AÇÃO</td>
                 <td>AÇÃO</td>
               </tr>
@@ -96,21 +102,12 @@
                 <td class="td-main"><input type="text"></td>
                 <td class="td-main"><input type="date"></td>
                 <td class="td-main"><input type="text"></td>
-                <td class="td-main"><a href="#">ATUALIZAR</td>
-                <td class="td-main"><a href="#">EXCLUIR</a></td>
-              </tr>
-              <tr>
                 <td class="td-main"><input type="text"></td>
                 <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="date"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><a href="#">ATUALIZAR</td>
-                <td class="td-main"><a href="#">EXCLUIR</a></td>
-              </tr>
-              <tr>
                 <td class="td-main"><input type="text"></td>
                 <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="date"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
                 <td class="td-main"><input type="text"></td>
                 <td class="td-main"><a href="#">ATUALIZAR</td>
                 <td class="td-main"><a href="#">EXCLUIR</a></td>
@@ -119,6 +116,43 @@
                 <td class="td-main"><input type="text"></td>
                 <td class="td-main"><input type="text"></td>
                 <td class="td-main"><input type="date"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><a href="#">ATUALIZAR</td>
+                <td class="td-main"><a href="#">EXCLUIR</a></td>
+              </tr>
+              <tr>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="date"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><a href="#">ATUALIZAR</td>
+                <td class="td-main"><a href="#">EXCLUIR</a></td>
+              </tr>
+              <tr>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="date"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text"></td>
                 <td class="td-main"><input type="text"></td>
                 <td class="td-main"><a href="#">ATUALIZAR</td>
                 <td class="td-main"><a href="#">EXCLUIR</a></td>
@@ -169,6 +203,6 @@
         </div>
       </div>
     </footer>
-    <script src="script_SERV.js"></script>
+    <script src="script_PAC.js"></script>
   </body>
 </html>
