--- a/consultsPages/home_User/home_User.html
+++ b/consultsPages/home_User/home_User.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
+    <!-- ICONES: -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+
     <!-- FONTES -->
     <!-- LEAGUE SPARTAN -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -89,9 +93,19 @@
       </div>
       <div class="buttons">
         <h2>BEM VINDO ! O QUE DESEJA ACESSAR ?</h2>
-        <button onclick="urlRote()" id="urlRote">AGENDAR CONSULTA</button>
-        <button>MINHA CONTA</button>
-        <button>CONFIGURAÇÕES</button>
+        <button onclick="urlRote()" id="urlRote">
+        <span class="material-symbols-outlined">
+          stethoscope
+        </span><br>AGENDAR CONSULTA</button>
+        <button>
+        <span class="material-symbols-outlined">
+          account_circle
+        </span><br>MINHA CONTA</button>
+
+        <button>
+        <span class="material-symbols-outlined">
+          settings
+        </span>CONFIGURAÇÕES</button>
       </div>
       </div>
     </div>
@@ -140,6 +154,7 @@
         </div>
       </div>
     </footer>
+    <script src="https://use.fontawesome.com/62e43a72a9.js"></script>
     <script src="script_home.js"></script>
   </body>
 </html>
