--- a/consultsPages/professional_User/especialidades_User.html
+++ b/consultsPages/professional_User/especialidades_User.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
+    <!-- ICONES: -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+
     <!-- FONTES -->
     <!-- LEAGUE SPARTAN -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
