--- a/consultsPages/home_User/home_User.html
+++ b/consultsPages/home_User/home_User.html
@@ -94,18 +94,18 @@
       <div class="buttons">
         <h2>BEM VINDO ! O QUE DESEJA ACESSAR ?</h2>
         <button onclick="urlRote()" id="urlRote">
-        <span class="material-symbols-outlined">
+          <span class="material-symbols-outlined">
           stethoscope
-        </span><br>AGENDAR CONSULTA</button>
-        <button>
-        <span class="material-symbols-outlined">
+          </span><br>AGENDAR CONSULTA</button>
+        <button onclick="minhaConta()">
+          <span class="material-symbols-outlined">
           account_circle
-        </span><br>MINHA CONTA</button>
+          </span><br>MINHA CONTA</button>
 
-        <button>
-        <span class="material-symbols-outlined">
+        <button onclick="settings()" id="settings" >
+          <span class="material-symbols-outlined">
           settings
-        </span>CONFIGURAÇÕES</button>
+          </span>CONFIGURAÇÕES</button>
       </div>
       </div>
     </div>
