--- a/consultsPages/horario_User/horarios_User.html
+++ b/consultsPages/horario_User/horarios_User.html
@@ -89,26 +89,19 @@
         </div>
       </div>
       <div class="especialidades">
-        <h2>SELECIONE O MÉDICO:</h2>
-        <div id="button_especialidade">
-          <button class="doutor">
-            <div>
-              Dr. Fulano Ciclano <br />
-              <h6>CRM:000000000</h6>
-            </div>
-          </button>
-          <button>
-            <div>
-              Dr. Fulano Ciclano <br />
-              <h6>CRM:000000000</h6>
-            </div>
-          </button>
-          <button>
-            <div>
-              Dr. Fulano Ciclano <br />
-              <h6>CRM:000000000</h6>
-            </div>
-          </button>
+        <h2>SELECIONE O MELHOR HORARIO PARA VOCÊ:</h2>
+        <input type="date" />
+        <div class="horas">
+          <div>
+            <button class="confirmation" onclick="confirmation()">09:00</button>
+            <button class="confirmation" onclick="confirmation()">09:30</button>
+            <button class="confirmation" onclick="confirmation()">10:00</button>
+          </div>
+          <div>
+            <button class="confirmation" onclick="confirmation()">10:30</button>
+            <button class="confirmation" onclick="confirmation()">11:00</button>
+            <button class="confirmation" onclick="confirmation()">11:30</button>
+          </div>
         </div>
       </div>
     </div>
@@ -157,6 +150,6 @@
         </div>
       </div>
     </footer>
-    <script src="script_especialidades.js"></script>
+    <script src="script_Horarios.js"></script>
   </body>
 </html>
