--- a/loginPage/Login.html
+++ b/loginPage/Login.html
@@ -96,7 +96,11 @@
             placeholder="Senha:"
           />
         </div>
-        <a id="animation" href="#" name="animation" onclick="Flip()"
+        <a
+          id="animation"
+          href="../singUpPage/singUp.html"
+          name="animation"
+          onclick="Flip()"
           >Ainda não se inscreveu ?</a
         >
         <input type="submit" name="btn" id="btn" value="ENTRAR" />
@@ -106,6 +110,7 @@
     <div id="imagem"></div>
 
     <script src="scripts_login.js"></script>
+    <!-- test -->
     <footer>
       <img src="../../assets/Mais Brasil Logo.png" alt="" />
       <div class="feet">
