--- a/consultsPages/minhaConta/minhaConta.html
+++ b/consultsPages/minhaConta/minhaConta.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
+    <!-- ICONES: -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+
     <!-- FONTES -->
     <!-- LEAGUE SPARTAN -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -47,6 +53,7 @@
     <div id="header">
       <div class="logo">
         <img src="../../../assets/Mais Brasil Logo.png" alt="" />
+
         <div id="text">
           <!-- LEAGUE SPARTAN -->
           <h1>Centro Médico</h1>
@@ -55,12 +62,7 @@
       </div>
       <a href="../../loginPage/Login.html"></a>
       <div class="btn_marcar">
-        <div class="btn_marcarConsulta">
-          <button onclick="url()" id="btn_Consult">
-            MARQUE SUA<br />
-            CONSULTA
-          </button>
-        </div>
+        <div class="btn_marcarConsulta"></div>
       </div>
       <div class="pai" onclick="menu()">
         <div class="filha"></div>
@@ -69,75 +71,47 @@
       </div>
     </div>
 
+    <h1>Minha conta:</h1>
     <div id="Container">
-      <div class="trajeto">
-        <div id="agendar">
-          <p>Agendar consulta</p>
-          <br /><br />
-          <p>Dados do paciente</p>
-          <br /><br />
-          <p>Especialidade</p>
-          <br /><br />
-          <p>profissional</p>
-          <br /><br />
-          <p>horario</p>
-          <br /><br />
-          <p>Confirmação</p>
-          <br /><br />
-        </div>
-      </div>
-
-      <div class="form">
-        <form>
-          <h2>DADOS DO PACIENTE:</h2>
-          <div>
-            <div>
-              <label for=""
-                >Nivel de relacionamento com o dono(a) desta conta:</label
-              ><br />
-              <select name="" id="" style="margin-top: 13px">
-                <option value=""></option>
-                <option value="">Muito</option>
-                <option value="">Médio</option>
-                <option value="">Pouca</option></select
-              ><br />
-              <label for="">Nome do paciente:</label><br />
-              <input type="text" /><br />
-              <label for="">Registro geral (RG):</label><br />
-              <input type="text" /><br />
-              <label for="">Cadastro de pessoa física (CPF):</label><br />
-              <input type="text" /><br />
-              <label for="">Telefone:</label><br />
-              <input type="text" /><br />
-              <div class="inputs-inline">
-                <div>
-                  <label for="">Data de nascimento:</label>
-                  <input type="date" />
-                </div>
-                <div>
-                  <label for="">Sexo:</label>
-                  <input type="text" />
-                </div>
-              </div>
-            </div>
-            <div>
-              <label for="">CEP:</label><br />
-              <input type="text" /><br />
-              <label for="">Cidade:</label><br />
-              <input type="text" /><br />
-              <label for="">Bairro:</label><br />
-              <input type="text" /><br />
-              <label for="">Rua:</label><br />
-              <input type="text" /><br />
-              <label for="">Numero da casa:</label><br />
-              <input type="text" /><br />
-              <label for="">Complemento:</label><br />
-              <input type="text" /><br />
+      <div class="Main-box">
+        <div class="box-1">
+          <div class="consultas">
+            <div class="texto-box">
+              <h2>Consultas marcadas:</h2>
             </div>
           </div>
-          <input type="submit" name="AVANÇAR" id="urlRote_2" value="AVANÇAR" />
-        </form>
+          <h3>Agendamento:</h3>
+          <label for="">Data:</label>
+          <p>dd/mm/aaaa</p>
+          <label for="">Profissional:</label>
+          <p>.....</p>
+          <label for=""></label>
+          <h3>PACIENTE:</h3>
+          <label for="">Nome:</label>
+          <p>Fulano de tal</p>
+          <label for="">RG:</label>
+          <p>********</p>
+        </div>
+        <div class="box-2">
+          <div class="consultas">
+            <div class="texto-box">
+              <h2>Consultas marcadas:</h2>
+            </div>
+          </div>
+          <h3>Agendamento:</h3>
+          <label for="">Data:</label>
+          <p>dd/mm/aaaa</p>
+          <label for="">Profissional:</label>
+          <p>.....</p>
+          <label for=""></label>
+          <h3>PACIENTE:</h3>
+          <label for="">Nome:</label>
+          <p>Fulano de tal</p>
+          <label for="">RG:</label>
+          <p>********</p>
+        </div>
       </div>
+    </div>
     </div>
 
     <footer>
@@ -184,6 +158,6 @@
         </div>
       </div>
     </footer>
-    <script src="script_dados.js"></script>
+    <script src="script_Conta.js"></script>
   </body>
 </html>
