--- a/src/consultsPages/home_User/home_User.html
+++ b/src/consultsPages/home_User/home_User.html
@@ -60,17 +60,12 @@
       </div>
       <a href="../../loginPage/Login.html"></a>
       <div class="btn_marcar">
-        <div class="btn_marcarConsulta">
-          <button onclick="url()" id="btn_Consult">
-            MARQUE SUA<br />
-            CONSULTA
-          </button>
         </div>
-      </div>
-      <div class="pai" onclick="menu()">
-        <div class="filha"></div>
-        <div class="filha"></div>
-        <div class="filha"></div>
+        <div class="pai" onclick="menu()">
+          <div class="filha"></div>
+          <div class="filha"></div>
+          <div class="filha"></div>
+        </div>
       </div>
     </div>
 
@@ -105,7 +100,7 @@
         <button onclick="settings()" id="settings" >
           <span class="material-symbols-outlined">
           settings
-          </span>CONFIGURAÇÕES</button>
+          </span><br>CONFIGURAÇÕES</button>
       </div>
       </div>
     </div>
