--- a/src/consultsPages/confirmation_User/confirmation.html
+++ b/src/consultsPages/confirmation_User/confirmation.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
+    <!-- ICONES: -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+
     <!-- FONTES -->
     <!-- LEAGUE SPARTAN -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -56,12 +62,7 @@
       </div>
       <a href="../../loginPage/Login.html"></a>
       <div class="btn_marcar">
-        <div class="btn_marcarConsulta">
-          <button onclick="url()" id="btn_Consult">
-            MARQUE SUA<br />
-            CONSULTA
-          </button>
-        </div>
+        <div class="btn_marcarConsulta"></div>
       </div>
       <div class="pai" onclick="menu()">
         <div class="filha"></div>
@@ -87,29 +88,74 @@
           <br /><br />
         </div>
       </div>
-      <div class="buttons">
-        <h2>SELECIONE A ESPECIALIDADE:</h2>
-        <div class="main_btn">
-          <div>          
-            <button class="especialitys" onclick="especialitys()">ALERGOLOGIA</button>
-            <button class="especialitys" onclick="especialitys()">CARDIOLOGIA</button>
-            <button class="especialitys" onclick="especialitys()">CLINICO GERAL</button>
-            <button class="especialitys" onclick="especialitys()">GASTROENTEROLOGISTA</button>
+      <div class="main-all">
+        <h2>CONFIRMAR DADOS:</h2>
+        <br>
+        <div class="especialidades">
+          <div class="div-main-especialidades">
+            <div class="container-especialidades">
+              <div class="container-especialidades-agendamento">
+                <h2>AGENDAMENTO:</h2>
+                <div class="agendamento-1">
+                <div class="p-agendamento">
+                  <h3>Data:</h3>
+                  <br>
+                  <p>dd/mm/aaaa</p>
+                </div>
+                <div class="p-agendamento">   
+                  <h3>HORARIO:</h3>
+                  <br>
+                  <p>00:00</p>  
+                </div>
+                </div>
+                <div class="agendamento-2">
+                  <div class="p-agendamento">
+                    <h3>PROFISSIONAL:</h3>
+                    <br>
+                    <p>DR.Fulano Ciclano</p>
+                  </div>
+                  <div class="p-agendamento">
+                    <h3>ESPECIALIDADE:</h3>
+                    <br>
+                    <p>Pediatria</p>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <div class="container-especialidades-agendamento">
+                  <h2>PACIENTE:</h2>
+                  <div class="agendamento-1">
+                    <div class="p-agendamento">
+                      <h3>NOME:</h3>
+                      <p>Fulaninho de tal</p>
+                    </div>
+                    <div class="p-agendamento">
+                      <h3>RG:</h3>
+                      <p>00000000000000-0</p>
+                    </div>
+                  </div>
+                  <div class="agendamento-3">
+                    <div class="p-agendamento">
+                      <h3>CPF:</h3>
+                      <p>000.000.00.00</p>
+                    </div>
+                    <div class="p-agendamento">
+                      <h3>DATA DE NASCIMENTO:</h3>
+                      <p>dd/mm/aaaa</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="div-button-especialidades">
+              <div id="button-especialidades">
+                <div>
+                  <button>AGENDAR</button>
+                </div>
+            </div>
           </div>
-          <div>
-            <button class="especialitys" onclick="especialitys()">GINECOLOGISTA</button>
-            <button class="especialitys" onclick="especialitys()">DERMATOLOGISTA</button>
-            <button class="especialitys" onclick="especialitys()">NEUROCIRURGIA</button>
-            <button class="especialitys" onclick="especialitys()">OFTAMOLOGIA</button>
-          </div>
-          <div>
-            <button class="especialitys" onclick="especialitys()">ORTOPEDIA</button>
-            <button class="especialitys" onclick="especialitys()">PEDIATRIA</button>
-            <button class="especialitys" onclick="especialitys()">PSIQUIATRIA</button>
-            <button class="especialitys" onclick="especialitys()">UROLOGIA</button>
           </div>
         </div>
-      </div>
       </div>
     </div>
 
@@ -157,6 +203,6 @@
         </div>
       </div>
     </footer>
-    <script src="script_especialidade.js"></script>
+    <script src="script_Confirmation.js"></script>
   </body>
 </html>
