--- a/src/consultsPages/confirmation_User/confirmation.html
+++ b/src/consultsPages/confirmation_User/confirmation.html
@@ -103,16 +103,16 @@
                   <p>dd/mm/aaaa</p>
                 </div>
                 <div class="p-agendamento">   
-                  <h3>HORARIO:</h3>
+                  <h3>PROFISSIONAL:</h3>
                   <br>
-                  <p>00:00</p>  
+                  <p>DR. Fulano Ciclano</p>  
                 </div>
                 </div>
                 <div class="agendamento-2">
                   <div class="p-agendamento">
-                    <h3>PROFISSIONAL:</h3>
+                    <h3>HORARIO:</h3>
                     <br>
-                    <p>DR.Fulano Ciclano</p>
+                    <p>00:00</p>
                   </div>
                   <div class="p-agendamento">
                     <h3>ESPECIALIDADE:</h3>
@@ -124,23 +124,23 @@
               <div>
                 <div class="container-especialidades-agendamento">
                   <h2>PACIENTE:</h2>
-                  <div class="agendamento-1">
+                  <div class="agendamento-3">
                     <div class="p-agendamento">
                       <h3>NOME:</h3>
                       <p>Fulaninho de tal</p>
                     </div>
                     <div class="p-agendamento">
                       <h3>RG:</h3>
-                      <p>00000000000000-0</p>
+                      <p>000000000000-0</p>
                     </div>
                   </div>
-                  <div class="agendamento-3">
+                  <div class="agendamento-4">
                     <div class="p-agendamento">
                       <h3>CPF:</h3>
                       <p>000.000.00.00</p>
                     </div>
                     <div class="p-agendamento">
-                      <h3>DATA DE NASCIMENTO:</h3>
+                      <h3>DATA NASCIMENTO:</h3>
                       <p>dd/mm/aaaa</p>
                     </div>
                   </div>
