--- a/src/consultsPages/home_User/home_User.html
+++ b/src/consultsPages/home_User/home_User.html
@@ -71,19 +71,18 @@
 
     <div id="Container">
       <div class="trajeto">
+        <div class="rota-main">
+          <div class="rota-filha"></div>
+        </div>
         <div id="agendar">
-          <p>Agendar consulta</p>
-          <br /><br />
-          <p>Dados do paciente</p>
-          <br /><br />
-          <p>Especialidade</p>
-          <br /><br />
-          <p>profissional</p>
-          <br /><br />
-          <p>horario</p>
-          <br /><br />
-          <p>Confirmação</p>
-          <br /><br />
+          <div class="p-agendamentos">
+            <p>Agendar consulta</p>
+            <p>Dados do paciente</p>
+            <p>Especialidade</p>
+            <p>profissional</p>
+            <p>horario</p>
+            <p>Confirmação</p>
+          </div>
         </div>
       </div>
       <div class="buttons">
