--- a/src/consultsPages/home_User/home_User.html
+++ b/src/consultsPages/home_User/home_User.html
@@ -72,6 +72,11 @@
     <div id="Container">
       <div class="trajeto">
         <div class="rota-main">
+          <div class="rota-filha">.</div>
+          <div class="rota-filha"></div>
+          <div class="rota-filha"></div>
+          <div class="rota-filha"></div>
+          <div class="rota-filha"></div>
           <div class="rota-filha"></div>
         </div>
         <div id="agendar">
