--- a/src/consultsPages/home_User/home_User.html
+++ b/src/consultsPages/home_User/home_User.html
@@ -72,7 +72,9 @@
     <div id="Container">
       <div class="trajeto">
         <div class="rota-main">
-          <div class="rota-filha">.</div>
+        </div>
+        <div class="rotas-filhas">
+          <div class="rota-filha" style="background-color: #629fb6;"></div>
           <div class="rota-filha"></div>
           <div class="rota-filha"></div>
           <div class="rota-filha"></div>
