--- a/src/consultsPages/confirmation_User/confirmation.html
+++ b/src/consultsPages/confirmation_User/confirmation.html
@@ -73,50 +73,55 @@
 
     <div id="Container">
       <div class="trajeto">
+        <div class="rota-main"></div>
+        <div class="rotas-filhas">
+          <div class="rota-filha"></div>
+          <div class="rota-filha"></div>
+          <div class="rota-filha"></div>
+          <div class="rota-filha"></div>
+          <div class="rota-filha"></div>
+          <div class="rota-filha" style="background-color: #629fb6"></div>
+        </div>
         <div id="agendar">
-          <p>Agendar consulta</p>
-          <br /><br />
-          <p>Dados do paciente</p>
-          <br /><br />
-          <p>Especialidade</p>
-          <br /><br />
-          <p>profissional</p>
-          <br /><br />
-          <p>horario</p>
-          <br /><br />
-          <p>Confirmação</p>
-          <br /><br />
+          <div class="p-agendamentos">
+            <p>Agendar consulta</p>
+            <p>Dados do paciente</p>
+            <p>Especialidade</p>
+            <p>profissional</p>
+            <p>horario</p>
+            <p>Confirmação</p>
+          </div>
         </div>
       </div>
       <div class="main-all">
         <h2>CONFIRMAR DADOS:</h2>
-        <br>
+        <br />
         <div class="especialidades">
           <div class="div-main-especialidades">
             <div class="container-especialidades">
               <div class="container-especialidades-agendamento">
                 <h2>AGENDAMENTO:</h2>
                 <div class="agendamento-1">
-                <div class="p-agendamento">
-                  <h3>Data:</h3>
-                  <br>
-                  <p>dd/mm/aaaa</p>
-                </div>
-                <div class="p-agendamento">   
-                  <h3>PROFISSIONAL:</h3>
-                  <br>
-                  <p>DR. Fulano Ciclano</p>  
-                </div>
+                  <div class="p-agendamento">
+                    <h3>Data:</h3>
+                    <br />
+                    <p>dd/mm/aaaa</p>
+                  </div>
+                  <div class="p-agendamento">
+                    <h3>PROFISSIONAL:</h3>
+                    <br />
+                    <p>DR. Fulano Ciclano</p>
+                  </div>
                 </div>
                 <div class="agendamento-2">
                   <div class="p-agendamento">
                     <h3>HORARIO:</h3>
-                    <br>
+                    <br />
                     <p>00:00</p>
                   </div>
                   <div class="p-agendamento">
                     <h3>ESPECIALIDADE:</h3>
-                    <br>
+                    <br />
                     <p>Pediatria</p>
                   </div>
                 </div>
@@ -152,8 +157,8 @@
                 <div>
                   <button>AGENDAR</button>
                 </div>
+              </div>
             </div>
-          </div>
           </div>
         </div>
       </div>
