--- a/src/consultsPages/horario_User/horarios_User.html
+++ b/src/consultsPages/horario_User/horarios_User.html
@@ -73,19 +73,24 @@
 
     <div id="Container">
       <div class="trajeto">
+        <div class="rota-main"></div>
+        <div class="rotas-filhas">
+          <div class="rota-filha"></div>
+          <div class="rota-filha"></div>
+          <div class="rota-filha"></div>
+          <div class="rota-filha"></div>
+          <div class="rota-filha" style="background-color: #629fb6"></div>
+          <div class="rota-filha"></div>
+        </div>
         <div id="agendar">
-          <p>Agendar consulta</p>
-          <br /><br />
-          <p>Dados do paciente</p>
-          <br /><br />
-          <p>Especialidade</p>
-          <br /><br />
-          <p>profissional</p>
-          <br /><br />
-          <p>horario</p>
-          <br /><br />
-          <p>Confirmação</p>
-          <br /><br />
+          <div class="p-agendamentos">
+            <p>Agendar consulta</p>
+            <p>Dados do paciente</p>
+            <p>Especialidade</p>
+            <p>profissional</p>
+            <p>horario</p>
+            <p>Confirmação</p>
+          </div>
         </div>
       </div>
       <div class="especialidades">
