--- a/src/consultsPages/home_User/home_User.html
+++ b/src/consultsPages/home_User/home_User.html
@@ -83,17 +83,17 @@
         </div>
         <div id="agendar">
           <div class="p-agendamentos">
-            <p>Agendar consulta</p>
-            <p>Dados do paciente</p>
-            <p>Especialidade</p>
-            <p>profissional</p>
-            <p>horario</p>
-            <p>Confirmação</p>
+            <p><strong>Agendar consulta</strong></p>
+            <p><strong>Dados do paciente</strong></p>
+            <p><strong>Especialidade</strong></p>
+            <p><strong>Profissional</strong></p>
+            <p><strong>Horário</strong></p>
+            <p><strong>Confirmação</strong></p> 
           </div>
         </div>
       </div>
       <div class="buttons">
-        <h2>BEM VINDO ! O QUE DESEJA ACESSAR ?</h2>
+        <h2>Bem vindo! O que deseja acessar?</h2>
         <button onclick="urlRote()" id="urlRote">
           <span class="material-symbols-outlined">
           stethoscope
