--- a/src/consultsPages/dados_User/dados_User.html
+++ b/src/consultsPages/dados_User/dados_User.html
@@ -93,7 +93,7 @@
       </div>
 
       <div class="form">
-        <form>
+        <form class="form-user">
           <h2>DADOS DO PACIENTE:</h2>
           <div>
             <div>
@@ -107,17 +107,17 @@
                 <option value="">Pouca</option></select
               ><br />
               <label for="">Nome do paciente:</label><br />
-              <input type="text" /><br />
+              <input type="text" id="Nome"/><br />
               <label for="">Registro geral (RG):</label><br />
-              <input type="text" /><br />
+              <input type="text" id="RG"/><br />
               <label for="">Cadastro de pessoa física (CPF):</label><br />
-              <input type="text" /><br />
+              <input type="text" id="CPF"/><br />
               <label for="">Telefone:</label><br />
               <input type="text" /><br />
               <div class="inputs-inline">
                 <div>
                   <label for="">Data de nascimento:</label>
-                  <input type="date" />
+                  <input type="date"  id="Data"/>
                 </div>
                 <div>
                   <label for="">Sexo:</label>
