--- a/src/Configuracao/index.html
+++ b/src/Configuracao/index.html
@@ -163,6 +163,6 @@
         </div>
       </div>
     </footer>
-    <script src="script_Settings.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
