--- a/src/consultsPages/especialidades_User/especialidades.html
+++ b/src/consultsPages/especialidades_User/especialidades.html
@@ -94,7 +94,7 @@
       </div>
       <div class="buttons">
         <h2>SELECIONE A ESPECIALIDADE:</h2>
-        <div class="main_btn">
+        <div class="mainBtn">
           <div>          
             <button class="especialitys" onclick="especialitys()" value="ALERGOLOGIA">ALERGOLOGIA</button>
             <button class="especialitys" onclick="especialitys()" value="CARDIOLOGIA">CARDIOLOGIA</button>
