--- a/src/singUpPage/singUp.html
+++ b/src/singUpPage/singUp.html
@@ -70,7 +70,7 @@
     </div>
 
     <div id="Container">
-      <form id="Formulario">
+      <form id="Formulario" method="POST" action="/User/Insert">
         <!-- LEAGUE SPARTAN -->
         <h2 id="login">FAÇA SEU CADASTRO:</h2>
         <div class="icons">
