--- a/src/consultsPages/confirmation_User/confirmation.html
+++ b/src/consultsPages/confirmation_User/confirmation.html
@@ -105,7 +105,7 @@
                   <div class="p-agendamento">
                     <h3>Data:</h3>
                     <br />
-                    <p>dd/mm/aaaa</p>
+                    <p id="p-Data-Agendamento">dd/mm/aaaa</p>
                   </div>
                   <div class="p-agendamento">
                     <h3>PROFISSIONAL:</h3>
@@ -117,12 +117,12 @@
                   <div class="p-agendamento">
                     <h3>HORARIO:</h3>
                     <br />
-                    <p>00:00</p>
+                    <p id="p-horario-agendamento">00:00</p>
                   </div>
                   <div class="p-agendamento">
                     <h3>ESPECIALIDADE:</h3>
                     <br />
-                    <p>Pediatria</p>
+                    <p id="p-Especialidades-agendamento">Pediatria</p>
                   </div>
                 </div>
               </div>
@@ -132,21 +132,21 @@
                   <div class="agendamento-3">
                     <div class="p-agendamento">
                       <h3>NOME:</h3>
-                      <p>Fulaninho de tal</p>
+                      <p id="p-name">Fulaninho de tal</p>
                     </div>
                     <div class="p-agendamento">
                       <h3>RG:</h3>
-                      <p>000000000000-0</p>
+                      <p id="p-RG">000000000000-0</p>
                     </div>
                   </div>
                   <div class="agendamento-4">
                     <div class="p-agendamento">
                       <h3>CPF:</h3>
-                      <p>000.000.00.00</p>
+                      <p id="p-CPF">000.000.00.00</p>
                     </div>
                     <div class="p-agendamento">
                       <h3>DATA NASCIMENTO:</h3>
-                      <p>dd/mm/aaaa</p>
+                      <p id="p-DATANASCIMENTO">dd/mm/aaaa</p>
                     </div>
                   </div>
                 </div>
