--- a/src/consultsPages/confirmation_User/confirmation.html
+++ b/src/consultsPages/confirmation_User/confirmation.html
@@ -110,7 +110,7 @@
                   <div class="p-agendamento">
                     <h3>PROFISSIONAL:</h3>
                     <br />
-                    <p>DR. Fulano Ciclano</p>
+                    <p id="p-medico-agendamento">DR. Fulano Ciclano</p>
                   </div>
                 </div>
                 <div class="agendamento-2">
@@ -135,7 +135,7 @@
                       <p id="p-name">Fulaninho de tal</p>
                     </div>
                     <div class="p-agendamento">
-                      <h3>RG:</h3>
+                      <h3>REGISTRO GERAL(RG):</h3>
                       <p id="p-RG">000000000000-0</p>
                     </div>
                   </div>
@@ -145,7 +145,7 @@
                       <p id="p-CPF">000.000.00.00</p>
                     </div>
                     <div class="p-agendamento">
-                      <h3>DATA NASCIMENTO:</h3>
+                      <h3>DATA DE NASCIMENTO:</h3>
                       <p id="p-DATANASCIMENTO">dd/mm/aaaa</p>
                     </div>
                   </div>
